# cursorconnect

./: .gitignore  AGENTS.md  README.md  SDK_TYPES_REFERENCE.md  list_models.py  live_test.py  live_test_local.py  package-lock.json  package.json  pyproject.toml  test_app.py  test_manager.py
cursorconnect/: __init__.py  agent.py  artifact.py  cli.py  client.py  cursor.py  exceptions.py  mesh.py  run.py
cursorconnect/_bridge/: __init__.py  bridge.js  local_run.py  manager.py  setup.py
cursorconnect/runtimes/: __init__.py  base.py  cloud.py
cursorconnect/types/: __init__.py  account.py  conversation.py  mcp.py  mesh.py  messages.py  models.py  options.py  run_protocol.py  updates.py
docs/: cursorconnect.md  module-guide.md
docs/cursorconnect/: agent-runtime.md  local-runtime.md
tests/: __init__.py  conftest.py  test_agent_lifecycle.py  test_bridge_streaming.py  test_compat_shim.py  test_cursor_namespace.py  test_error_handling.py  test_mesh.py  test_run_operations.py
